# Packio

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: bump-version.yml  dev-ci.yml
modules/core/: CMakeLists.txt
modules/core/include/packio/core/: compression.h  serializable.h  version.h.in
modules/core/include/serialpack/core/: serializable.h
tests/: CMakeLists.txt
tests/core/: CMakeLists.txt
tests/core/src/: serializable.test.cpp
tests/testutils/: CMakeLists.txt
tests/testutils/include/testutils/: serializableinstances.h
